react井字棋学习

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>react with typescript</title>
+    <link rel="stylesheet" href="src/css/index.css">
 </head>
 <body>
     <div id="app">loading...</div>
@@ -14,7 +15,7 @@
     <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
 
     <!-- main -->
-    <script src="./dist/bundle.js"></script>
+    <script src="/bundle.js"></script>
 
 </body>
 </html>
